# pcshscr2023

./: LICENSE  README.md  package-lock.json  package.json
docs/: 0th.md  0th_ja.md  0th_th.md  1st.md  1st_ja.md  1st_th.md  2nd.md  README.md  README_ja.md  README_th.md  index.md
docs/.vitepress/: config.mts  config.ts  enConfig.mts  enConfig.ts  jaConfig.mts  jaConfig.ts  thConfig.mts  thConfig.ts
docs/en/: index.md
docs/en/iot/: README.md
docs/iot/: README.md
docs/iot/students/: README.md
docs/ja/: 0th.md  1st.md  2nd.md  3rd.md  README.md  index.md
docs/ja/iot/: README.md
docs/ja/students/: 1st.md  README.md
docs/ja/webapp/: README.md
docs/ja/xr/: README.md
docs/students/: 1st.md  README.md
docs/th/: 0th.md  1st.md  2nd.md  README.md  index.md
docs/th/iot/: README.md
docs/th/students/: 1st.md  README.md
docs/th/webapp/: README.md
docs/th/xr/: README.md
docs/webapp/: README.md
docs/webapp/students/: 1st.md  2nd.md  3rd.md  README.md
docs/webapp/teachers/: 0th.md  1st.md  2nd.md  3rd.md  README.md
docs/xr/: README.md
docs/xr/students/: README.md
src/1th/first-app/: package-lock.json  package.json
src/script/2nd/: data.json  database.py  insert_data.py  insert_initial_data.py  load_initial_data.py  table.py
src/webapp/handson-for-catchup/src/2nd/dish-delight/backend/: .gitignore  database.py  insert_data.py  main.py  models.py  pyproject.toml  read_json.py  schemas.py  university.db
webapp/handson-for-catchup/: 0th.md  0th_ja.md  0th_th.md  1st.md  1st_ja.md  1st_th.md  README.md  README_ja.md  README_th.md
(+79 files in other folders)
