[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Miho Nakamoto", email = "miho.nakamoto@esm.co.jp" }
]
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.20",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "flake8>=5.0.4",
]

[tool.hatch.metadata]
allow-direct-references = true
